smb: Use O_RDWR to fix fstat when writing

fstat fails with EINVAL on Windows servers if O_WRONLY is used to open
(though it works properly on SAMBA servers). O_RDWR is needed to make
it work. This causes issues when copying files over gvfsd-fuse among
others.

https://bugzilla.gnome.org/show_bug.cgi?id=795805